Fix: Add proxy_pass_header directives for X-App-Pool and X-Release-Id headers

--- a/nginx.conf
+++ b/nginx.conf
@@ -34,16 +34,22 @@ http {
         # Main location
         location / {
             proxy_pass http://backend;
+            proxy_pass_header X-App-Pool;
+            proxy_pass_header X-Release-Id;
         }
 
         # Health check
         location /healthz {
             proxy_pass http://backend/healthz;
+            proxy_pass_header X-App-Pool;
+            proxy_pass_header X-Release-Id;
         }
 
         # Version endpoint
         location /version {
             proxy_pass http://backend/version;
+            proxy_pass_header X-App-Pool;
+            proxy_pass_header X-Release-Id;
         }
     }
 }
