--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,20 @@
+
 BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
 GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
-
-ACTIVE_POOL=blue
 
 RELEASE_ID_BLUE=blue-v1.0
 RELEASE_ID_GREEN=green-v1.0
 
-PORT=3000
+ACTIVE_POOL=blue
+
+# Slack Integration 
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
+
+# Alert Thresholds
+ERROR_RATE_THRESHOLD=2
+WINDOW_SIZE=200
+ALERT_COOLDOWN_SEC=300
+
+# Maintenance Mode
+MAINTENANCE_MODE=false
+
