--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -3,13 +3,24 @@ events {
 }
 
 http {
-    # Logging
-    access_log /var/log/nginx/access.log;
+    # Custom log format with pool, release, upstream details
+    log_format detailed '$remote_addr - $remote_user [$time_local] '
+                       '"$request" $status $body_bytes_sent '
+                       '"$http_referer" "$http_user_agent" '
+                       'pool=$upstream_http_x_app_pool '
+                       'release=$upstream_http_x_release_id '
+                       'upstream_status=$upstream_status '
+                       'upstream_addr=$upstream_addr '
+                       'request_time=$request_time '
+                       'upstream_response_time=$upstream_response_time';
+
+    # Logging - accessible via shared volume
+    access_log /var/log/nginx/access.log detailed;
     error_log /var/log/nginx/error.log warn;
 
     # Upstream configuration
     upstream backend {
-        server app_blue:3000 max_fails=1 fail_timeout=10s;
+        server app_blue:3000 max_fails=2 fail_timeout=10s;
         server app_green:3000 backup;
     }
 
@@ -17,7 +28,7 @@ http {
         listen 80;
         server_name _;
 
-        # Proxy settings for fast failover
+        # Aggressive proxy settings for fast failover
         proxy_connect_timeout 2s;
         proxy_send_timeout 3s;
         proxy_read_timeout 3s;
@@ -36,6 +47,10 @@ http {
             proxy_pass http://backend;
             proxy_pass_header X-App-Pool;
             proxy_pass_header X-Release-Id;
+            
+            # Add headers to response for debugging
+            add_header X-Upstream-Addr $upstream_addr always;
+            add_header X-Upstream-Status $upstream_status always;
         }
 
         # Health check
