--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./nginx.conf.template:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - nginx_logs:/var/log/nginx
     depends_on:
       - app_blue
@@ -32,10 +32,10 @@ services:
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/healthz"]
-      interval: 5s
-      timeout: 3s
-      retries: 2
-      start_period: 10s
+      interval: 3s
+      timeout: 2s
+      retries: 1
+      start_period: 5s
 
   # Green Service (Backup)
   app_green:
@@ -52,10 +52,10 @@ services:
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/healthz"]
-      interval: 5s
-      timeout: 3s
-      retries: 2
-      start_period: 10s
+      interval: 3s
+      timeout: 2s
+      retries: 1
+      start_period: 5s
 
   # Alert Watcher Service
   alert_watcher:
@@ -63,26 +63,22 @@ services:
       context: .
       dockerfile: Dockerfile.watcher
     container_name: alert_watcher
-    volumes:
-      - nginx_logs:/var/log/nginx:ro
-      - ./watcher.py:/app/watcher.py:ro
     environment:
       - SLACK_WEBHOOK_URL=${SLACK_WEBHOOK_URL}
-      - ACTIVE_POOL=${ACTIVE_POOL:-blue}
-      - ERROR_RATE_THRESHOLD=${ERROR_RATE_THRESHOLD:-2}
+      - ERROR_RATE_THRESHOLD=${ERROR_RATE_THRESHOLD:-2.0}
       - WINDOW_SIZE=${WINDOW_SIZE:-200}
       - ALERT_COOLDOWN_SEC=${ALERT_COOLDOWN_SEC:-300}
-      - MAINTENANCE_MODE=${MAINTENANCE_MODE:-false}
-      - LOG_FILE=/var/log/nginx/access.log
+    volumes:
+      - nginx_logs:/var/log/nginx:ro
     depends_on:
       - nginx
     networks:
       - app_network
     restart: unless-stopped
 
+volumes:
+  nginx_logs:
+
 networks:
   app_network:
     driver: bridge
-
-volumes:
-  nginx_logs:
